# invoice-analytics-platform

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/client-kafka/: .env  dockerfile  main.py  requirements.txt
client/: api-client.py  csv_to_json.py
readme_images/: architecture_drawio.drawio
spark/: kafka_to_mongodb.ipynb
streamlit/: .env  dockerfile  main.py  requirements.txt
