[tool.poetry]
name = "invoice analytics platform"
version = "0.1.0"
description = ""
authors = ["Yosef Aziz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.92.0"
kafka-python = "^2.0.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.2"
pandas = "^1.5.3"
numpy = "^1.24.2"
streamlit = "^1.18.1"
pymongo = "^4.3.3"
pipreqs = "^0.4.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
